      * stdio-common/sscanf.c for libc6-sparc64 with gcc-3.3 can become to be
        compiled.  (Closes: #185649)
      * Timezone data is updated to tzdata2003a.
        (Closes: #140788, #149862, #186210)

    - debian/locales/usr/sbin/locale-gen: Fix the localedef invocation
      argument order, to run under POSIXLY_CORRECT=1 environment.
      (Closes: #185924)

 -- GOTO Masanori <gotom@debian.or.jp>  Sun, 23 Mar 2003 02:39:58 +0900

glibc (2.3.1-16) unstable; urgency=high

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/glibc23-cert-rpcxdr.dpatch: Fix "CERT Advisory
      CA-2003-10 Integer overflow in Sun RPC XDR library routines"
      (Closes: #185508).

    - debian/packages.d/glibc-doc.mk: Fix unneeded file '[' and ']' in
      /usr/share/man/man3.
    - These debian/patches/<below files> are removed from cvs because
      they are no longer being used and were superceeded by CVS patches:
      - libgcc-compat-mips.dpatch
      - libgcc-compat-sparc.dpatch
    - debian/libc/DEBIAN/postinst: add spamassassin to restart during
      upgrade from 2.2 to 2.3.  (Closes: #185275)
    - debian/control.in/opt: add one empty line at the end of file.
      This fix avoids opt packages to get mixed debian/control
      message with libc-udeb package.  (Closes: #185688)

 -- GOTO Masanori <gotom@debian.or.jp>  Tue, 18 Mar 2003 00:04:13 +0900

glibc (2.3.1-15) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/packages.d/optimized.mk: drop configure --disable-static 
      option, because it does not work.  enable-kernel version bumps
      up to 2.4.1.

    - debian/manpages/nscd.8: Apply slightly improvement for the nscd(8),
      nscd_nischeck(8), and nscd.conf(5) man pages.  Patched by 
      Sebastian Rittau <srittau@jroger.in-berlin.de> (Closes: #94058)
    - debian/manpages/nscd.conf.5: likewise.
    - debian/manpages/nscd_nischeck.8: likewise.
    - debian/manpages/zdump.1: add the description that zonename should be