@@ -65,7 +65,6 @@ Section: devel
 Priority: standard
 Depends: libc6 (= ${Source-Version})
 Recommends: c-compiler
-Suggests: glibc-doc
 Description: GNU C Library: Development Libraries and Header Files.
  Contains the symlinks, headers, and object files needed to compile
  and link programs which use the standard C library.
@@ -123,7 +122,6 @@ Section: devel
 Priority: standard
 Depends: libc6.1 (= ${Source-Version})
 Recommends: c-compiler
-Suggests: glibc-doc
 Description: GNU C Library: Development Libraries and Header Files.
  Contains the symlinks, headers, and object files needed to compile
  and link programs which use the standard C library.
@@ -181,7 +179,6 @@ Section: devel
 Priority: standard
 Depends: libc0.3 (= ${Source-Version})
 Recommends: c-compiler
-Suggests: glibc-doc
 Description: GNU C Library: Development Libraries and Header Files.
  Contains the symlinks, headers, and object files needed to compile
  and link programs which use the standard C library.
@@ -239,7 +236,6 @@ Section: devel
 Priority: standard
 Depends: libc1 (= ${Source-Version})
 Recommends: c-compiler
-Suggests: glibc-doc
 Description: GNU C Library: Development Libraries and Header Files.
  Contains the symlinks, headers, and object files needed to compile
  and link programs which use the standard C library.
