@@ -14,7 +14,6 @@ Section: devel
 Priority: standard
 Depends: @libc@ (= ${Source-Version})
 Recommends: c-compiler
-Suggests: @glibc@-doc
 Description: GNU C Library: Development Libraries and Header Files.
  Contains the symlinks, headers, and object files needed to compile
  and link programs which use the standard C library.
