@@ -28,16 +28,19 @@ if ($DEB_HOST_GNU_SYSTEM eq "gnu") {
 }
 if ($DEB_HOST_GNU_SYSTEM eq "linux") {
     push @{$libc_c{'Suggests'}}, 'locales';
-    push @{$libc_c{'Suggests'}}, "${glibc}-doc";
     push @{$libc_c{'Provides'}}, 'gconv-modules';
     #db1 compat libraries from libc 2.0/2.1, we need to depend on them
     #until after sarge is released
     push @{$libc_c{'Depends'}}, "libdb1-compat";
     push @{$libc_dev_c{'Recommends'}}, 'c-compiler';
-    push @{$libc_dev_c{'Suggests'}}, "${glibc}-doc";
     push @{$libc_dev_c{'Replaces'}}, ('man-db (<= 2.3.10-41)', 'gettext (<= 0.10.26-1)',
 		'ppp (<= 2.2.0f-24)', 'libgdbmg1-dev (<= 1.7.3-24)');
 }
+
+# ${glibc}-doc is suggested by $libc_c and $libc_dev_c.
+push @{$libc_c{'Suggests'}}, "${glibc}-doc";
+push @{$libc_dev_c{'Suggests'}}, "${glibc}-doc";
+push @{$libc_dev_c{'Suggests'}}, "manpages-dev";
 
 # nss-db is now seperate
 push @{$libc_c{'Recommends'}}, 'libnss-db';
