@@ -62,6 +62,14 @@ glibc (2.3.2-1) unstable; urgency=low
       argument order, to run under POSIXLY_CORRECT=1 environment.
       (Closes: #185924)
 
+    - debian/sysdeps/depflags.pl: add Suggests: manpages-dev in libc-dev
+      package.  (Closes: #158410)
+    - debian/sysdeps/depflags.pl: Adding entry "Suggests: glibc-doc"
+      into depflags.pl push.
+    - debian/control.in/libc: Remove "Suggests: glibc-doc" in each -dev
+      package entry.
+    - debian/control: likewise.
+
  -- GOTO Masanori <gotom@debian.or.jp>  Sun, 23 Mar 2003 02:39:58 +0900
 
 glibc (2.3.1-16) unstable; urgency=high
